--- a/asm/Makefile
+++ b/asm/Makefile
@@ -12,7 +12,7 @@ SRC		=	$(SDIR)main.c			\
 			$(SDIR)str_to_av.c		\
 			$(SDIR)write_instruction.c	\
 			$(SDIR)file_to_core.c		\
-			$(SDIR)verif_syntax		\
+			$(SDIR)verif_syntax.c		\
 			$(SDIR)op.c
 
 OBJ		=	$(SRC:.c=.o)
