--- a/asm/Makefile
+++ b/asm/Makefile
@@ -13,7 +13,8 @@ SRC		=	$(SDIR)main.c			\
 			$(SDIR)write_instruction.c	\
 			$(SDIR)file_to_core.c		\
 			$(SDIR)verif_syntax.c		\
-			$(SDIR)op.c
+			$(SDIR)op.c			\
+			$(SDIR)coding_byte.c
 
 OBJ		=	$(SRC:.c=.o)
 
