change the argument of setup arg to have the env in this fct and add instr_t pointer in program_t fct

--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -26,6 +26,7 @@ SRC =	./src/main.c			\
 	./src/opcode/st.c		\
 	./src/opcode/sub.c		\
 	./src/opcode/lld.c		\
+	./src/opcode/tool_op.c		\
 
 OBJ =	$(SRC:.c=.o)
 
