--- a/asm/Makefile
+++ b/asm/Makefile
@@ -15,6 +15,7 @@ SRC		=	$(SDIR)main.c			\
 			$(SDIR)rewrite.c		\
 			$(SDIR)file_to_cor.c		\
 			$(SDIR)verif_syntax.c		\
+			$(SDIR)label.c			\
 			$(SDIR)header.c			\
 			$(SDIR)op.c			\
 			$(SDIR)coding_byte.c		\
