--- a/asm/Makefile
+++ b/asm/Makefile
@@ -5,6 +5,7 @@
 ## compile, et clean
 ##
 
+NAME		=	asm
 
 SDIR		=	$(realpath src)/
 
@@ -25,33 +26,37 @@ SRC		=	$(SDIR)main.c			\
 
 OBJ		=	$(SRC:.c=.o)
 
-NAME		=	asm
+CFLAGS		+=	-Wall -Wextra -Werror
 
-CFLAGS		+=	-Wall -Wextra -I./include -g3
+CPPFLAGS	=	-I $(realpath include)
 
 LDFLAGS		=	-L./lib/my
 
 LDLIBS		=	-lmy
 
+DEBUG		=	false
+
+ifeq ($(DEBUG), true)
+		CFLAGS	+=	-g3
+endif
+
 all:	lib $(NAME)
 
 $(NAME):	$(OBJ)
-	gcc -o $(NAME) $(OBJ) $(CFLAGS) $(LDFLAGS) $(LDLIBS)
+	$(CC) -o $(NAME) $(OBJ) $(CFLAGS) $(LDFLAGS) $(LDLIBS)
 
 lib:
-	make -C lib/my
+	$(MAKE) -C lib/my
 
 clean:
-	rm -f $(OBJ)
-	rm -f *.cor vg*
+	$(RM) -f $(OBJ)
+	$(RM) -f *.cor vg*
 	make clean -C lib/my
 
 fclean: clean
-	rm -f $(NAME)
+	$(RM) -f $(NAME)
 	make fclean -C lib/my
 
 re:	fclean all
 
-r:	all clean
-
-.PHONY: all lib clean fclean re r
+.PHONY: all lib clean fclean re
