--- a/asm/Makefile
+++ b/asm/Makefile
@@ -22,6 +22,7 @@ SRC		=	$(SDIR)main.c			\
 			$(SDIR)rewrite_label.c		\
 			$(SDIR)header.c			\
 			$(SDIR)op.c			\
+			$(SDIR)magic_reverse.c		\
 			$(SDIR)coding_byte.c		\
 			$(SDIR)verif_header.c		\
 			$(SDIR)my_memset.c
