--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -36,7 +36,7 @@ SRC =	./src/main.c			\
 
 OBJ =	$(SRC:.c=.o)
 
-CFLAGS = -Wall -Wextra
+CFLAGS = -Wall -Wextra -Werror
 
 CPPFLAGS = -Llib/my -lmy -Iinclude -g3
 
