fix program cycle managment

--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -37,7 +37,7 @@ SRC =	./src/main.c			\
 
 OBJ =	$(SRC:.c=.o)
 
-CFLAGS = -Wall -Wextra #-Werror
+CFLAGS = -Wall #-Wextra #-Werror
 
 CPPFLAGS = -Llib/my -lmy -Iinclude -g3
 
