g3 suppressed from lib compilation

--- a/asm/lib/my/Makefile
+++ b/asm/lib/my/Makefile
@@ -41,7 +41,7 @@ SRCS	= ./char/my_char.c \
 	  ./str/my_strdigits.c \
 	  ./str/match.c \
 
-CFLAGS	=	-I./ -g3
+CFLAGS	=	-I./
 
 OBJS	= $(SRCS:.c=.o)
 
