--- a/corewar/lib/my/Makefile
+++ b/corewar/lib/my/Makefile
@@ -39,7 +39,7 @@ SRCS	= ./char/my_char.c \
 	  ./str/my_strdigits.c \
 	  ./str/match.c \
 
-CFLAGS	=	-I./ -g3
+CFLAGS	=	-I./
 
 OBJS	= $(SRCS:.c=.o)
 
